--- a/Weber_Luetzenkirchens_Blatt_4/Nummer_9/makefile
+++ b/Weber_Luetzenkirchens_Blatt_4/Nummer_9/makefile
@@ -10,8 +10,8 @@
 #		Aufraeumen mit make clean
 
 # Variablen mit Dateinamen, Compileraufruf und Optionen fuer Compiler und Linker
-HDR     = 											#header einfuegen -> hpp
-SRC		= sort.cpp									#code einfuegen   -> cpp
+HDR     = loeser.h											#header einfuegen -> hpp
+SRC		= lgs.cpp loeser.cpp									#code einfuegen   -> cpp
 OBJ     = $(SRC:.cpp=.o)
 BIN     = main										#name der ausfuehrbaren datei
 CC      = g++
